force-app/main/default/objects/Holder_Drawings_Detail__c/Holder_Drawings_Detail__c.object-meta.xml
<CustomObject>
    <label>Holder Drawings Detail</label>
    <nameField>
        <label>Holder Drawings Detail</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Holder Drawings Detail</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>