force-app/main/default/objects/Holder_Drawings_Detail__c/fields/DimD__c.field-meta.xml
<CustomField>
    <fullName>DimD__c</fullName>
    <label>DimD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>