force-app/main/default/objects/Holder_Drawings_Detail__c/fields/DimE__c.field-meta.xml
<CustomField>
    <fullName>DimE__c</fullName>
    <label>DimE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>