force-app/main/default/objects/Holder_Drawings_Detail__c/fields/Drawing_Type__c.field-meta.xml
<CustomField>
    <fullName>Drawing_Type__c</fullName>
    <label>Drawing Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>