force-app/main/default/objects/Holder_Drawings_Detail__c/fields/Text2Val__c.field-meta.xml
<CustomField>
    <fullName>Text2Val__c</fullName>
    <label>Text2Val</label>
    <length>255</length>
    <type>Text</type>
</CustomField>