force-app/main/default/objects/Holder_Drawings_Detail__c/fields/Text7Val__c.field-meta.xml
<CustomField>
    <fullName>Text7Val__c</fullName>
    <label>Text7Val</label>
    <length>255</length>
    <type>Text</type>
</CustomField>