force-app/main/default/objects/Holder_Drawings_Detail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Drawing_Type__c</columns>
    <columns>DrawingID__c</columns>
    <columns>DimD__c</columns>
    <columns>DWGNO__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>SizeClassDesc__c</columns>
    <columns>HIC__c</columns>
    <columns>HOC__c</columns>
    <columns>Text6Val__c</columns>
    <columns>Text7Val__c</columns>
    <columns>Text8Val__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>