force-app/main/default/objects/Holder_Drawings_Detail__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>Drawing_Type__c</columns>
    <columns>NAME</columns>
    <columns>DrawingID__c</columns>
    <columns>Revision__c</columns>
    <columns>DWGNO__c</columns>
    <columns>Text1Val__c</columns>
    <columns>Text2Val__c</columns>
    <columns>Text3Val__c</columns>
    <columns>Text4Val__c</columns>
    <columns>Text5Val__c</columns>
    <columns>Text6Val__c</columns>
    <columns>Text7Val__c</columns>
    <columns>Text8Val__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>